--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,13 @@ evaluate = "^0.4.3"
 tensorboardx = "^2.6.2.2"
 tensorboard = "^2.17.1"
 torchvision = "^0.19.1"
+segmentation-models-pytorch = {git = "https://github.com/qubvel/segmentation_models.pytorch"}
+monai = "^1.3.2"
+timm = "^1.0.9"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
+fiftyone = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
