--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-transformers = "^4.44.2"
+transformers = {git = "https://github.com/MagnusS0/transformers", rev = "sam_support_sdpa"}
 pycocotools = "^2.0.8"
 numpy = "^2.1.1"
 peft = "^0.12.0"
@@ -20,10 +20,14 @@ torchvision = "^0.19.1"
 segmentation-models-pytorch = {git = "https://github.com/qubvel/segmentation_models.pytorch"}
 monai = "^1.3.2"
 timm = "^1.0.9"
+psutil = "^6.0.0"
+packaging = "^24.1"
+ninja = "^1.11.1.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
 fiftyone = "^0.25.2"
+fvcore = "^0.1.5.post20221221"
 
 [build-system]
 requires = ["poetry-core"]
